feat: add getAllDeclaredFieldsWithAnnotation and getAllDeclaredFieldsWithType in ReflectUtil